Fixed the imports of the SCSS files

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -1,14 +1,4 @@
-@use 'base';
-
-
-
-
-// Default HTML Tags
-
-body {
-    margin: 0;
-    font-family: $paragraph-font-family;
-}
+@import "base";
 
 
 
