--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1,5 +1,12 @@
-@use 'base';
-@use 'general';
+@import 'general';
+
+
+// Default HTML Tags
+* {box-sizing:border-box}
+body {
+    margin: 0;
+    font-family: $paragraph-font-family;
+}
 
 
 .vieolo-button {
