--- a/style/_base.scss
+++ b/style/_base.scss
@@ -1,70 +1,70 @@
 
 
 
-$box-shadow: 0px 3px 10px rgba(27, 78, 96,0.2);
-$box-shadow-dark: 0px 3px 10px rgba(27, 78, 96,0.5);
-$reverse-box-shadow: -2px -3px 15px rgba(0,0,0,.2);
+$box-shadow: 0px 3px 10px rgba(27, 78, 96,0.2) !default;
+$box-shadow-dark: 0px 3px 10px rgba(27, 78, 96,0.5) !default;
+$reverse-box-shadow: -2px -3px 15px rgba(0,0,0,.2) !default;
 
-$universal-border-radius: 10px;
+$universal-border-radius: 10px !default;
 
 
 
 // Pallet Colors
 
-$background-color: #FFFFFB;
-$hover-color: #CCE6F5;
-$border-color: #f2f2f2;
+$background-color: #FFFFFB !default;
+$hover-color: #CCE6F5 !default;
+$border-color: #f2f2f2 !default;
 
 
-$primary-color-normal: rgb(7, 6, 35);
-$primary-color-transparent: rgba(7, 6, 35, 0.3);
-$primary-color-light: rgb(152, 148, 214);
-$primary-color-gradient: linear-gradient(to right bottom, #090934, #090931, #09082e, #09082a, #080727, #080624, #080622, #07051f, #06051c, #050419, #040415, #030311);
+$primary-color-normal: rgb(7, 6, 35) !default;
+$primary-color-transparent: rgba(7, 6, 35, 0.3) !default;
+$primary-color-light: rgb(152, 148, 214) !default;
+$primary-color-gradient: linear-gradient(to right bottom, #090934, #090931, #09082e, #09082a, #080727, #080624, #080622, #07051f, #06051c, #050419, #040415, #030311) !default;
 
-$secondary-color-normal: #3E88C2;
-$secondary-color-transparent: rgba(62, 136, 194, 0.3);
-$secondary-color-light: rgb(26, 15, 46);
-$secondary-color-gradient: linear-gradient(to right bottom, #71a7d3, #659fcf, #5997cb, #4c90c6, #3e88c2);
+$secondary-color-normal: #3E88C2 !default;
+$secondary-color-transparent: rgba(62, 136, 194, 0.3) !default;
+$secondary-color-light: rgb(26, 15, 46) !default;
+$secondary-color-gradient: linear-gradient(to right bottom, #71a7d3, #659fcf, #5997cb, #4c90c6, #3e88c2) !default;
 
-$tertiary-color-normal: rgb(207, 219, 242);
-$tertiary-color-transparent: rgba(207, 219, 242, 0.3);
-$tertiary-color-light: rgb(26, 15, 46);
-$tertiary-color-gradient: linear-gradient(to right bottom, #d5e7fb, #d2e6fc, #cfe5fc, #cde3fd, #cae2fe, #c6e0fe, #c2ddfe, #bedbfe, #b8d7fd, #b1d3fd, #abd0fc, #a4ccfb);
+$tertiary-color-normal: rgb(207, 219, 242) !default;
+$tertiary-color-transparent: rgba(207, 219, 242, 0.3) !default;
+$tertiary-color-light: rgb(26, 15, 46) !default;
+$tertiary-color-gradient: linear-gradient(to right bottom, #d5e7fb, #d2e6fc, #cfe5fc, #cde3fd, #cae2fe, #c6e0fe, #c2ddfe, #bedbfe, #b8d7fd, #b1d3fd, #abd0fc, #a4ccfb) !default;
 
-$alert-color-normal: rgb(225, 188, 41);
-$alert-color-transparent: rgba(225, 188, 41, 0.3);
-$alert-color-light: rgb(26, 15, 46);
-$alert-color-gradient: linear-gradient(to right bottom, #e9c843, #e7c63e, #e6c43a, #e4c135, #e3bf30, #e3bf2d, #e4be2a, #e4be26, #e6c024, #e9c122, #ebc320, #eec41d);
+$alert-color-normal: rgb(225, 188, 41) !default;
+$alert-color-transparent: rgba(225, 188, 41, 0.3) !default;
+$alert-color-light: rgb(26, 15, 46) !default;
+$alert-color-gradient: linear-gradient(to right bottom, #e9c843, #e7c63e, #e6c43a, #e4c135, #e3bf30, #e3bf2d, #e4be2a, #e4be26, #e6c024, #e9c122, #ebc320, #eec41d) !default;
 
-$error-color-normal: rgb(245, 0, 87);
-$error-color-transparent: rgba(252, 232, 239, 1);
-$error-color-light: rgb(26, 15, 46);
-$error-color-gradient: linear-gradient(to right bottom, #f23c7c, #f33576, #f42d6f, #f52468, #f51961, #f3135d, #f20a59, #f00055, #ec0054, #e80053, #e50051, #e10050);
+$error-color-normal: rgb(245, 0, 87) !default;
+$error-color-transparent: rgba(252, 232, 239, 1) !default;
+$error-color-light: rgb(26, 15, 46) !default;
+$error-color-gradient: linear-gradient(to right bottom, #f23c7c, #f33576, #f42d6f, #f52468, #f51961, #f3135d, #f20a59, #f00055, #ec0054, #e80053, #e50051, #e10050) !default;
 
-$success-color-normal: rgb(24, 139, 108);
-$success-color-transparent: rgba(24, 139, 108, 0.3);
-$success-color-light: rgb(26, 15, 46);
-$success-color-gradient: linear-gradient(to right bottom, #209979, #1f9676, #1d9374, #1c9171, #1a8e6f, #198e6f, #188f6f, #178f6f, #169271, #149573, #139874, #119b76);
-
-
-$disable-color-normal: #b0bec5;
-$disable-color-gradient: linear-gradient(to right bottom, #c5cdd1, #c0c9ce, #bac5cb, #b5c2c8, #b0bec5);
+$success-color-normal: rgb(24, 139, 108) !default;
+$success-color-transparent: rgba(24, 139, 108, 0.3) !default;
+$success-color-light: rgb(26, 15, 46) !default;
+$success-color-gradient: linear-gradient(to right bottom, #209979, #1f9676, #1d9374, #1c9171, #1a8e6f, #198e6f, #188f6f, #178f6f, #169271, #149573, #139874, #119b76) !default;
 
 
-$accessory-orange-normal: wheat;
-$accessory-orange-transparent: rgba(245, 222, 179, 0.3);
-$accessory-orange-light: rgb(26, 15, 46);
-$accessory-orange-gradient: linear-gradient(to right bottom, #f4e5c9, #f4e3c3, #f5e2be, #f5e0b8, #f5deb3);
+$disable-color-normal: #b0bec5 !default;
+$disable-color-gradient: linear-gradient(to right bottom, #c5cdd1, #c0c9ce, #bac5cb, #b5c2c8, #b0bec5) !default;
 
-$accessory-blue-normal: rgb(25, 118, 210);
-$accessory-blue-transparent: rgba(245, 222, 179, 0.3);
-$accessory-blue-light: rgb(26, 15, 46);
-$accessory-blue-gradient: linear-gradient(to right bottom, #4795e3, #3d8ddf, #3285db, #267ed6, #1976d2);
 
-$accessory-green-normal: rgb(152, 227, 214);
-$accessory-green-transparent: rgba(245, 222, 179, 0.3);
-$accessory-green-light: rgb(26, 15, 46);
-$accessory-green-gradient: linear-gradient(to right bottom, #ccf9f2, #bff4eb, #b2eee4, #a5e9dd, #98e3d6);
+$accessory-orange-normal: wheat !default;
+$accessory-orange-transparent: rgba(245, 222, 179, 0.3) !default;
+$accessory-orange-light: rgb(26, 15, 46) !default;
+$accessory-orange-gradient: linear-gradient(to right bottom, #f4e5c9, #f4e3c3, #f5e2be, #f5e0b8, #f5deb3) !default;
+
+$accessory-blue-normal: rgb(25, 118, 210) !default;
+$accessory-blue-transparent: rgba(245, 222, 179, 0.3) !default;
+$accessory-blue-light: rgb(26, 15, 46) !default;
+$accessory-blue-gradient: linear-gradient(to right bottom, #4795e3, #3d8ddf, #3285db, #267ed6, #1976d2) !default;
+
+$accessory-green-normal: rgb(152, 227, 214) !default;
+$accessory-green-transparent: rgba(245, 222, 179, 0.3) !default;
+$accessory-green-light: rgb(26, 15, 46) !default;
+$accessory-green-gradient: linear-gradient(to right bottom, #ccf9f2, #bff4eb, #b2eee4, #a5e9dd, #98e3d6) !default;
 
 
 // Pallet Mixins
@@ -295,10 +295,10 @@ $navbar-height: 50px;
 
 
 // Fonts
-$paragraph-font-family: 'Roboto Condensed', sans-serif;;
-$paragraph-font-light-weight: 300;
-$paragraph-font-regular-weight: 400;
+$paragraph-font-family: 'Roboto Condensed', sans-serif !default;
+$paragraph-font-light-weight: 300 !default;
+$paragraph-font-regular-weight: 400 !default;
 
-$header-font-family: 'Montserrat', sans-serif;
-$header-font-bold-weight: 600;
+$header-font-family: 'Montserrat', sans-serif !default;
+$header-font-bold-weight: 600 !default;
 
