--- a/style/_base.scss
+++ b/style/_base.scss
@@ -80,7 +80,7 @@ $accessory-green-text: black !default;
 
 @mixin primary-background {
 	background-color: $primary-color-normal;
-	color: white;
+	color: $primary-color-text;
 }
 .primary-background {
 	@include primary-background;
@@ -89,7 +89,7 @@ $accessory-green-text: black !default;
 
 @mixin secondary-background {
 	background-color: $secondary-color-normal;	
-	color: white;
+	color: $secondary-color-text;
 }
 .secondary-background {
 	@include secondary-background;
@@ -97,7 +97,7 @@ $accessory-green-text: black !default;
 
 @mixin tertiary-background {
 	background-color: $tertiary-color-normal;
-	color: black;
+	color: $tertiary-color-text;
 }
 .tertiary-background {
 	@include tertiary-background;
@@ -105,7 +105,7 @@ $accessory-green-text: black !default;
 
 @mixin alert-background {
 	background-color: $alert-color-normal;	
-	color: white;
+	color: $alert-color-text;
 }
 .alert-background {
 	@include alert-background;
@@ -113,7 +113,7 @@ $accessory-green-text: black !default;
 
 @mixin error-background {
 	background-color: $error-color-normal;
-	color: white;
+	color: $error-color-text;
 }
 .error-background {
 	@include error-background;
@@ -121,7 +121,7 @@ $accessory-green-text: black !default;
 
 @mixin success-background {
 	background-color: $success-color-normal;
-	color: black;
+	color: $success-color-text;
 }
 .success-background {
 	@include success-background;
@@ -137,7 +137,7 @@ $accessory-green-text: black !default;
 
 @mixin accessory-orange-background {
 	background-color: $accessory-orange-normal;
-	color: black;
+	color: $accessory-orange-text;
 }
 .accessory-orange-background {
 	@include accessory-orange-background;
@@ -145,7 +145,7 @@ $accessory-green-text: black !default;
 
 @mixin accessory-blue-background {
 	background-color: $accessory-blue-normal;
-	color: white;
+	color: $accessory-blue-text;
 }
 .accessory-blue-background {
 	@include accessory-blue-background;
@@ -153,7 +153,7 @@ $accessory-green-text: black !default;
 
 @mixin accessory-green-background {
 	background-color: $accessory-green-normal;
-	color: white;
+	color: $accessory-green-text;
 }
 .accessory-green-background {
 	@include accessory-green-background;
