--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -357,3 +357,26 @@ body {
 
 
 
+.vieolo-file-input {
+	width: 100%;
+	height: 100%;
+	border: 4px dashed #f2f2f2;
+	position: relative;
+	@include center-by-flex-row;
+	box-sizing: border-box;
+
+	div {
+		@include center-by-flex-row;
+	}
+
+	input{
+		position: absolute;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+		outline: none;
+		opacity: 0;
+	}
+}
+
