--- a/style/_base.scss
+++ b/style/_base.scss
@@ -388,9 +388,9 @@ $tablet13PortraitBreakPoint: 1050px;
 $tablet11PortraitBreakPoint: 900px;
 $tablet10PortraitBreakPoint: 800px;
 $mobileBreakPoint: 700px;
-$drawer-width: 180px;
-$drawer-item-width: 160px;
-$navbar-height: 50px;
+$drawer-width: 180px !default;
+$drawer-item-width: 160px !default;
+$navbar-height: 50px !default;
 
 
 
