Added typograghy CSS classes

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -15,6 +15,9 @@ $background-color: #FFFFFB !default;
 $hover-color: #CCE6F5 !default;
 $border-color: #f2f2f2 !default;
 
+$normal-text-color: #2e2e2e !default;
+$gray-text-color: gray !default;
+
 
 $primary-color-normal: rgb(7, 6, 35) !default;
 $primary-color-transparent: rgba(7, 6, 35, 0.3) !default;
