--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -600,3 +600,65 @@ body {
 		@include secondary-background;
 	}
 }
+
+.vieolo-item-row {
+	width: 100%;	
+	margin: 6px 0;
+
+	.item-clickable {
+		cursor: pointer;
+	}
+
+	.item-selected {
+		background-color: $tertiary-color-normal;
+		border-radius: inherit;
+	}
+
+	.item-content {
+		padding: 0 5px;
+		height: 45px;
+
+		input {
+			background: transparent;
+			border: none;
+			font-size: 14px;
+			width: 70%;
+			border-radius: inherit;
+		}
+
+		.title-col {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+
+			p {
+				margin: 2px;
+				@include no-text-overflow;
+			}
+			
+			p:nth-child(1) {
+				font-size:14px;
+				@include font-header;
+			}
+	
+			p:nth-child(2) {
+				font-size: 11px;
+				@include font-light;
+			}		
+		}
+	
+		.button-col {
+			@include flex-start;
+		}
+	}
+
+	.item-with-icon {
+		display: grid;
+		grid-template-columns: 50px minmax(0, 1fr) 25px;
+	}
+
+	.item-without-icon {
+		display: grid;
+		grid-template-columns: minmax(0, 1fr) 25px;
+	}
+}
