Changed the style of the item row

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -611,7 +611,7 @@ body {
 
 	.item-selected {
 		background-color: $tertiary-color-normal;
-		border-radius: inherit;
+		border-color: $tertiary-color-normal;
 	}
 
 	.item-content {
