--- a/style/_base.scss
+++ b/style/_base.scss
@@ -12,7 +12,7 @@ $universal-border-radius: 10px !default;
 // Pallet Colors
 
 $background-color: #FFFFFB !default;
-$hover-color: #CCE6F5 !default;
+$hover-color: rgb(220, 247, 231) !default;
 $border-color: #f2f2f2 !default;
 
 $normal-text-color: #2e2e2e !default;
