--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -406,22 +406,26 @@ body {
 		border-color: $tertiary-color-normal;
 		height: 45px;
 		cursor: pointer;
-		display: flex;
-		flex-flow: column;
+		@include flex-row-space-between;
 		@include no-text-overflow;
 		width: 160px;
-		padding: 0 5px;
-		justify-content: center;
+		padding: 0 5px;		
 
-
-		.button-title {
-			margin: 0;
-		}
-
-		.button-value {
-			margin: 0;
-			@include no-text-overflow;
-		}
+		.button-text {
+			justify-content: center;
+			display: flex;
+			flex-flow: column;
+			width: 120px;
+			
+			.button-title {
+				margin: 0;
+			}
+	
+			.button-value {
+				margin: 0;
+				@include no-text-overflow;
+			}
+		}		
 	}
 
 	.select-button-error {
