--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -530,11 +530,19 @@ body {
 
 	.dropdown {
 		position: absolute;
-		top: 100%;
-		left: -110px;
+		top: 100%;		
 		z-index: 2;
 		padding: 5px;
 		@include card-dark-shadow;
+
+		&--left {
+			left: -110px;
+		}
+
+		&--right {
+			right: -110px;
+		}
+
 	}
 
 	.dropdown-item {
