--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -29,18 +29,44 @@ body {
 	font-size: 16px;
 	min-width: 50px;
 	@include font-header;
-
-	span {
-		@include center-by-flex-row;
-	}
-
+	@include flex-center;
 	.start-icon {
 		margin-right: 5px;
 	}
-
 	.end-icon {
 		margin-left: 5px;
 	}
+}
+.flex-row-space-between {
+    @include flex-row-space-between;
+}
+
+.with-start-icon {
+    .start-icon {
+		width: 35%;
+		text-align: left;
+    }
+    .button-text {
+        width: 65%;
+        text-align: left;
+    }
+}
+
+.with-end-icon {
+    .end-icon {
+        width: 35%;
+        text-align: right;
+    }
+    .button-text {
+        width: 65%;
+        text-align: right;
+    }
+}
+
+.outlined {
+    outline: 2px solid $primary-color-normal;
+    border-radius: 0;
+    outline-offset: 2px;
 }
 
 .vieolo-tip-icon {
@@ -369,6 +395,7 @@ body {
 	border-radius: 50%;
 	height: 40px;
 	width: 40px;
+	margin: 100px 200px;
 	background-color: white;
 	border: none;
 	display: flex;
@@ -399,6 +426,7 @@ body {
 	position: relative;
 	display: inline-block;
 	width: 160px;
+	left: 70%;
 
 	.select-button {
 		@include card-no-shadow;
@@ -450,15 +478,13 @@ body {
 	}
 
 	.select-dropdown {
-		position: absolute;
-		top: 100%;
+		position: fixed;
 		width: 160px;
 		z-index: 2;
 		background-color: white;
 		box-shadow: $box-shadow-dark;
 		border-radius: 5px;
 		max-height: 240px;
-		overflow-y: auto;
 	}
 
 	.select-item {
@@ -529,8 +555,7 @@ body {
 	display: inline-block;
 
 	.dropdown {
-		position: absolute;
-		top: 100%;		
+		position: fixed;		
 		z-index: 2;
 		padding: 5px;
 		@include card-dark-shadow;
