--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -685,46 +685,25 @@ body {
 	background-color: gray;
 	height: calc(100vh - 100px);
 	width: 100%;
-	max-width: 700px;
-	padding: 10px;
+	max-width: 700px;	
 	text-align: center;
 	position: relative;
 
-	&:hover {
-		.pdf-viewer-toolbar {
-			animation-name: slide-up;
-			animation-duration: 500ms;
-			opacity: 1;
-		}
-	}
-
-	.pdf-viewer-toolbar {
-		background: rgb(242, 242, 242);
-		background: linear-gradient(
-			90deg,
-			rgba(242, 242, 242, 1) 0%,
-			rgba(223, 223, 255, 1) 50%,
-			rgba(242, 242, 242, 1) 100%
-		);
-		height: 50px;
+	&__toolbar {
+		background-color: $primary-color-normal;
+		height: 30px;
 		padding: 1px;
-		border-radius: 25px;
-		position: absolute;
-		bottom: 100px;
-		left: 10%;
-		opacity: 0;
-		width: 250px;
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		z-index: 5;
+		border-radius: inherit;
+		width: 100%;
+		@include flex-row-space-between;		
 	}
 
-	.canvas-container {
+	&__canvas-container {
 		overflow: auto;
 		height: calc(100vh - 120px);
 		width: 100%;
 		max-width: 700px;
+		padding: 10px;
 
 		div,
 		img {
@@ -742,18 +721,6 @@ body {
 	}
 }
 
-
-@keyframes slide-up {
-	0% {
-		opacity: 0;
-		transform: translateY(120px);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
 
 .vieolo-back-button-row {
 	height: 50px;
