--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -682,10 +682,9 @@ body {
 
 
 .vieolo-pdf-viewer-component {
-	background-color: gray;
+	background-color: #e4e4e4;
 	height: calc(100vh - 100px);
 	width: 100%;
-	max-width: 700px;	
 	text-align: center;
 	position: relative;
 
@@ -702,7 +701,6 @@ body {
 		overflow: auto;
 		height: calc(100vh - 120px);
 		width: 100%;
-		max-width: 700px;
 		padding: 10px;
 
 		div,
