Fixed the margin of the page

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -707,6 +707,8 @@ body {
 
 	&__page {
 		position: relative;
+		margin-left: auto;
+		margin-right: auto;
 
 		&__text-layer {
 			position: absolute;
