--- a/style/_general.scss
+++ b/style/_general.scss
@@ -357,3 +357,157 @@
 }
 
 
+
+// Utility Classes
+
+
+.width {
+	&--px-600 {
+		width: 600px;
+	}
+
+	&--px-500 {
+		width: 500px;
+	}
+
+	&--px-400 {
+		width: 400px;
+	}
+
+	&--px-300 {
+		width: 300px;
+	}
+
+	&--px-200 {
+		width: 200px;
+	}
+
+	&--px-100 {
+		width: 100px;
+	}
+
+	&--vw-100 {
+		width: 100vw;
+	}
+
+	&--vw-90 {
+		width: 90vw;
+	}
+
+	&--vw-80 {
+		width: 80vw;
+	}
+
+	&--vw-70 {
+		width: 70vw;
+	}
+
+	&--vw-60 {
+		width: 60vw;
+	}
+
+	&--vw-50 {
+		width: 50vw;
+	}
+
+	&--pc-100 {
+		width: 100%;
+	}
+
+	&--pc-90 {
+		width: 90%;
+	}
+
+	&--pc-80 {
+		width: 80%;
+	}
+
+	&--pc-70 {
+		width: 70%;
+	}
+
+	&--pc-60 {
+		width: 60%;
+	}
+
+	&--pc-50 {
+		width: 50%;
+	}
+}
+
+
+
+
+.height {
+	&--px-600 {
+		height: 600px;
+	}
+
+	&--px-500 {
+		height: 500px;
+	}
+
+	&--px-400 {
+		height: 400px;
+	}
+
+	&--px-300 {
+		height: 300px;
+	}
+
+	&--px-200 {
+		height: 200px;
+	}
+
+	&--px-100 {
+		height: 100px;
+	}
+
+	&--vh-100 {
+		height: 100vh;
+	}
+
+	&--vh-90 {
+		height: 90vh;
+	}
+
+	&--vh-80 {
+		height: 80vh;
+	}
+
+	&--vh-70 {
+		height: 70vh;
+	}
+
+	&--vh-60 {
+		height: 60vh;
+	}
+
+	&--vh-50 {
+		height: 50vh;
+	}
+
+	&--pc-100 {
+		height: 100%;
+	}
+
+	&--pc-90 {
+		height: 90%;
+	}
+
+	&--pc-80 {
+		height: 80%;
+	}
+
+	&--pc-70 {
+		height: 70%;
+	}
+
+	&--pc-60 {
+		height: 60%;
+	}
+
+	&--pc-50 {
+		height: 50%;
+	}
+}
