--- a/style/_base.scss
+++ b/style/_base.scss
@@ -6,6 +6,7 @@ $box-shadow-dark: 0px 3px 10px rgba(27, 78, 96,0.5) !default;
 $reverse-box-shadow: -2px -3px 15px rgba(0,0,0,.2) !default;
 
 $universal-border-radius: 10px !default;
+$universal-border-radius-half: 5px !default;
 
 
 
