Changed the border radius of the icon button

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -366,7 +366,7 @@ body {
 }
 
 .vieolo-icon-button {
-	border-radius: 50%;
+	border-radius: 5px;
 	height: 40px;
 	width: 40px;
 	background-color: white;
