Added hover border to the switch set

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -343,6 +343,12 @@ body {
 	cursor: pointer;
 	display: grid;
 	grid-template-columns: 1fr 50px;
+	border: 2px solid transparent;
+
+	&:hover {
+		border: 2px solid $hover-color;
+		border-radius: 5px;
+	}
 
 	p {
 		margin: 0;
