--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -929,3 +929,25 @@ body {
 	width: 100%;
 	overflow: scroll;
 }
+
+.vieolo-table {	
+	background-color: white;
+
+	&__cell {
+		height: 40px;
+		display: flex;
+		padding: 0px 4px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	&__header-row {
+		border: 1px solid #f2f2f2;
+		display: grid;
+	}
+
+	&__content-row {
+		display: grid;
+	}
+}
