Added Row clickability to the table

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -135,6 +135,17 @@
 
 // Mixins -------------------------------
 
+@mixin clickable {
+	cursor: pointer;
+	
+	&:hover {
+		background-color: $hover-color;
+	}
+}
+.clickable {
+	@include clickable;
+}
+
 @mixin transition {
 	transition: all ease 0.5s;
 }
