Added border radius to the table

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -932,6 +932,8 @@ body {
 
 .vieolo-table {	
 	background-color: white;	
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 
 	&__header-row {
 		background-color: #f2f2f2;
