--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -935,6 +935,11 @@ body {
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 
+	&--headless {
+		border-radius: 0px;
+		border: 1px solid #ddd;
+	}
+
 	&__header-row {
 		background-color: #f2f2f2;
 		display: grid;
