Improved the radio group in the View

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1014,7 +1014,8 @@ body {
 				background-color: $primary-color-normal;
 			}
 			
-			p {
+			p,
+			svg {
 				color: $primary-color-text;
 			}
 		}
